# OTA_Headunit_yg

./: .env  .gitignore  .gitmodules  ARCHITECTURE.md  Dockerfile  OTA_E2E_TEST_GUIDE.md  OTA_Project_Detailed_Guide.md  README.md  docker-compose.ota-stack.env.example  docker-compose.ota-stack.yml  docker-compose.yml
.github/workflows/: yocto-ci.yml
DES_Instrument-Cluster/: README.md
DES_Instrument-Cluster/Cluster-app/: CMakeLists.txt
DES_Instrument-Cluster/Pi-controller/: controller.py
DES_Instrument-Cluster/systemd/: instrument-cluster.service  instrument-cluster.service.before_sync
Head-Unit/: CMakeLists.txt  README.md
Head-Unit/src/: HeadUnit.cpp  HeadUnit.h  ViewModel.cpp  ViewModel.h  main.cpp
Head-Unit/src/backend/bluetooth/: bluetooth_agent.cpp  bluetooth_agent.h  bluetooth_audio_player.cpp  bluetooth_audio_player.h  bluetooth_manager.cpp  bluetooth_manager.h
Head-Unit/src/backend/gear/: gear_client.cpp  gear_client.h
Head-Unit/src/backend/music/: music_player.cpp  music_player.h
Head-Unit/src/backend/vehicle/: vehicle_data_client.cpp  vehicle_data_client.h
Head-Unit/src/backend/weather/: weather_service.cpp  weather_service.h
Head-Unit/ui/: main.qml
Head-Unit/ui/components/: BackButton.qml  GearSelector.qml  VehicleInfoWidget.qml
Head-Unit/ui/pages/: AmbientScreen.qml  BluetoothScreen.qml  ClimateScreen.qml  HomeScreen.qml  MusicScreen.qml  MusicScreen_backup.qml  NavigationScreen.qml  music.qml
OTA_GH/: README.md  docker-compose.yml  quickstart.sh  schema.sql  structure.txt
OTA_GH/client/: .env.example  README.md  config.py  requirements.txt
OTA_GH/dashboard/: index.html  package.json
OTA_GH/scripts/: create_firmware.sh
OTA_GH/server/: Dockerfile  app.py  config.py  models.py  monitoring_reporter.py  mqtt_handler.py
OTA_VLM/: .gitignore  README.md  analyze_results.py  append_raw_and_result.py  append_result_to_failed_case.py  ingest_watch.py  normalize_result_json.py  vLLM_practice_token_fixed.py
OTA_VLM/Email System/: .env.example  README.md  email_sender.py  pipeline.py  rules.py  vlm_client.py
OTA_VLM/failed case/: log_generator.py
OTA_VLM/ota-dashboard/: README.md
docs/: partitioning.md  rauc.md
ota/client/: setup.py
ota/server/: .gitignore  README.md  code-review-to-claude-oci.md  docker-compose.yml  schema.sql  structure.txt
ota/tools/: build-image.sh  build-rauc-bundle.sh  ed25519-generate-keys.sh  ota-generate-keys.sh  ota-stack-down.sh  ota-stack-up.sh  rauc-generate-keys.sh  (+1 more)
scripts/: README.md  collect-debug-logs.sh  rebuild-bluetooth.sh
tools/: build-image.sh  build-rauc-bundle.sh  find-rpi-ip.sh  ota-stack-down.sh  ota-stack-up.sh  rauc-generate-keys.sh  sd-hotfix-ui.sh  yocto-init.sh
ui/qt-headunit/: CMakeLists.txt
ui/qt-headunit/qml/: Main.qml  qml.qrc
ui/qt-headunit/qml/components/: Id5Theme.qml  SimpleButton.qml  SimpleInput.qml
ui/qt-headunit/qml/pages/: HomePage.qml  MediaPage.qml  MediaYoutubeWebView.qml  NavMapView.html  NavPage.qml  OtaPage.qml
ui/qt-headunit/qml/services/: OtaApi.js
ui/qt-headunit/scripts/: collect-ui-logs.sh
ui/qt-headunit/src/: main.cpp
ui/qt-headunit/systemd/: headunit.service  ui-log-collector.service  ui-log-collector.timer
ui/qt-headunit/weston/: weston.ini
yocto-workspace/: .gitignore  .gitmodules  README.md  quick_fix_boot_hang.sh
(+184 files in other folders)
